# SensiaBridge

./: CMakeLists.txt  Doxyfile.in  conanfile.txt
cmake/: clang_setup.cmake
doctest/: CMakeLists.txt  SensiaBridge.cpp  SensiaBridge.h  test.cpp
features/: features.cpp  features.h  main.cpp
imgs/: output_video.avi
nodeclass/: main.cpp  node.cpp  node.h
src/: SensiaBridge.cpp  SensiaBridge.h  main.cpp
videoshow/: SensiaBridge.cpp  main.cpp
